Move build to the "script" part of .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - '7.0'
 
 install: ./build/install_dotnetcore_ubuntu14.sh
-before_script:
+script:
   - dotnet restore
   - dotnet build
-script: ./tests/runtests.sh
+  - ./tests/runtests.sh
