--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ php:
 install: ./build/install_dotnetcore_ubuntu14.sh
 script:
   - dotnet restore
+  - dotnet build -f .netcoreapp1.0 ./src/Compiler/PhpSyntax
+  - dotnet build -f .netcoreapp1.0 ./src/Compiler/PhpCodeAnalysis
   - dotnet build -f .netcoreapp1.0 ./src/Peachpie.Compiler.Tools
   - ./tests/runtests.sh
