--- a/src/Compiler/PhpSyntax/project.json
+++ b/src/Compiler/PhpSyntax/project.json
@@ -3,12 +3,14 @@
   "supports": {},
   "dependencies": {
     "Peachpie.Microsoft.CodeAnalysis": "*",
-    "CoreCompat.System.CodeDOM": "4.2.3-beta002"
   },
   "frameworks": {
-    ".NETPortable,Version=v4.5,Profile=Profile7": {},
     ".NETFramework,Version=v4.6": {},
     "netstandard1.6": {},
-    ".netcoreapp1.0": {}
+    ".netcoreapp1.0": {
+      "dependencies": {
+        "CoreCompat.System.CodeDOM": "4.2.3-beta002"
+      }
+    }
   }
 }
